# lightpath

./: .gitignore  .golangci.yaml  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  buildx.Dockerfile  controlplane.Dockerfile  deps.bzl  go.mod  go.sum  redirect.Dockerfile  skaffold.yaml
.github/workflows/: release.yaml
bpf/: lightpath_bpf_connect.c  lightpath_bpf_getsockopt.c  lightpath_bpf_redir.c  lightpath_bpf_sockops.c
bpf/headers/: common.h  config.h  logger.h  maps.h
cmd/controlplane/: BUILD.bazel  cmd.go  controlplane.go  kube.go
cmd/redirect/: cmd.go  redirect.go
cmd/test/: configserver.go  test.go
deploy/controlplane/: controlplane.yaml  kustomization.yaml  rbac.yaml
deploy/default/: kustomization.yaml  namespace.yaml
deploy/lightpath/: kustomization.yaml
deploy/proxy/: kustomization.yaml  proxy.yaml  rbac.yaml
deploy/proxy/config/: envoy.yaml
deploy/redirect/: kustomization.yaml  rbac.yaml  redirect.yaml
deploy/webhook/: kustomization.yaml  opa.yaml  rbac.yaml  webhook.yaml
deploy/webhook/config/: labelinject.rego  labelinject_test.rego
deploy/webhook/rego/: labelinject.rego  labelinject_test.rego
hack/benchmark/bench-infra/: README.md  flannel.yaml
hack/benchmark/bench-infra/manifests/: README.md
hack/benchmark/experiments/: README.md
hack/benchmark/experiments/generator/: Makefile  README.md  gen.go  k8s-deploy.yaml  k8s-lightpath-deploy.yaml  topology.dot  topology.yaml
hack/benchmark/experiments/generator/tanka/: jsonnetfile.lock.json  main.jsonnet  spec.json
hack/benchmark/experiments/results/: kube-proxy-res-baseline-500qps-2m.json  kube-proxy-res-simulated-error-1000qps-2m.json  kube-proxy-simulated-error-rate-500qps-2m.json  kube-proxy-whoami-100replicas.json  kube-proxy-whoami-10replicas.json  kube-proxy-whoami-400replicas.json  lightpath-res-baseline-least_request_policy-1000qps-1m.json  lightpath-res-baseline-least_request_policy-500qps-2m.json  lightpath-res-baseline-round_robin_policy-1000qps-1m.json  lightpath-res-baseline-round_robin_policy-500qps-2m.json  lightpath-simulated-error-rate-500qps-2m-envoy-retry-percentage.csv  lightpath-simulated-error-rate-500qps-2m-envoy-retry-total.csv  lightpath-simulated-error-rate-500qps-2m.json  lightpath-whoami-100replicas.json  lightpath-whoami-10replicas.json  lightpath-whoami-400replicas.json
hack/benchmark/experiments/scenarios/baseline/: k8s-deploy.yaml  k8s-kube-proxy-deploy.yaml  k8s-lightpath-deploy.yaml  topology.dot  topology.yaml
hack/benchmark/experiments/scenarios/baseline-rr/: k8s-lightpath-deploy.yaml  topology.yaml
hack/benchmark/k6/: Makefile  script.js
hack/bpf/: Makefile  lightpath_bpf_redir.c
hack/bpf/headers/: common.h  config.h  logger.h  maps.h
hack/ci/: envoy.yaml  kind-cluster.yaml  test-deploy.yaml
hack/multipass-cluster/: create.sh
hack/test/: whoami.yaml
hack/testing/multipass-cluster/: cloud-init.yaml
internal/lightpath/state/: service.go
internal/utils/: kube.go
internal/version/: version.go
pkg/configprovider/: clustermapper.go  endpointmapper.go  envoysnapshot.go  helper.go  transformer.go
pkg/logger/: BUILD.bazel  logger.go
pkg/redirect/: iptables.go  kube.go  redirect.go
pkg/resource/: BUILD.bazel  resource.go
pkg/server/: BUILD.bazel  server.go
pkg/state/: cache.go  configserver.go  service.go  subscriber.go
pkg/state/snapshot/: snapshot.go
pkg/translations/: clustermapper.go  consts.go  endpointmapper.go  envoysnapshot.go  filter_http.go  filter_tcp.go  helper.go  listenermapper.go  mapper.go  mapper_cluster.go  mapper_endpoints.go  mapper_listener.go  mapper_test.go  portsettings.go  translations.go  types.go
pkg/translations2/: helper.go  translations.go
pkg/wellknown/: wellknown.go
(+22 files in other folders)
