load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "controlplane_lib",
    srcs = ["controlplane.go"],
    importpath = "github.com/xvzf/lightpath/cmd/controlplane",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/logger",
        "//pkg/resource",
        "//pkg/server",
        "@com_github_envoyproxy_go_control_plane//pkg/cache/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//pkg/server/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//pkg/test/v3:go_default_library",
    ],
)

go_binary(
    name = "controlplane",
    embed = [":controlplane_lib"],
    visibility = ["//visibility:public"],
)
