load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/xvzf/lightpath/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_go_control_plane//envoy/service/cluster/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/discovery/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/endpoint/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/listener/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/route/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/runtime/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/secret/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//pkg/server/v3:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//keepalive:go_default_library",
    ],
)
